Sign Up Page Responsive Done

--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -1,3 +1,6 @@
+.limiter *{
+  max-width: 100vw;
+}
 .signUp-container {
   background-image: url(../../assets/background.png);
   background-size: cover;
@@ -32,6 +35,11 @@
   margin: 40px;
   padding: 2rem;
   /* margin: 0vh 20vh 0vh 25vh; */
+}
+
+.signup-form>.heading {
+  font-size: 25px;
+  padding: 15px 0;
 }
 
 .signup-form>.nameRow{
@@ -115,7 +123,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 39rem;
+  width: 40rem;
   border: 2px solid #f8f8f8;
   border-radius: 30rem;
   padding: 0.5rem 1rem;
@@ -173,7 +181,7 @@ input {
 
 .star-3Signup{
   position: absolute;
-  top: 33%;
+  top: 30%;
   left: 20%;
   width: 25px;
   z-index: 99999;
@@ -181,26 +189,34 @@ input {
 
 .star-2Signup{
   position: absolute;
-  bottom: 3%;
-  left:20%;
+  bottom: 0;
+  left: 12%;
   z-index: 99999;
 }
 
 .line-4Signup{
   position: absolute;
-  bottom: 34%;
-  right: 4%;
+  bottom: 20%;
+  right: 6%;
+  height: 180px;
+  z-index: 9999;
 }
 
 .ellipseSignup{
   position: absolute;
-  bottom: 30%;
-  right: 10%;
+  bottom: 16%;
+  right: 16.6%;
+  z-index: 9999;
 }
+
+
 
 @media screen and (max-width: 1024px) and (min-width: 769px) {
   .signup-form>.nameRow {
-    gap: 1rem;
+    gap: 2rem;
+  }
+  .signup-form>.nameRow>input {
+    width: 40%;
   }
   .signup-form>.email>input {
     width: 55%;
@@ -209,7 +225,68 @@ input {
     width: 55%;
   }
   .signup-form>.identityPhoto>div {
+    width: 100%;
+  }
+  .signup-form>.identityPhoto {
+    width: 87%;
+  }
+  .signup-form>.idNumber>input {
     width: 55%;
+  }
+  .signup-form>.moreDetails{
+    gap: 2rem;
+  }
+  .signup-form>.moreDetails>input{
+    width: 40%;
+  }
+  .signup-form>.password>input {
+    width: 55%;
+  }
+  .signup-form>.checkbox-signup {
+    width: 35rem;
+  }
+  .star-1Signup{
+    top: 24%;
+    right: 18% ;
+    z-index: 99999;
+  }
+  .star-2Signup{
+    bottom: 20%;
+    left: 12%;
+    z-index: 99999;
+  }
+  .line-4Signup{
+    bottom: 35%;
+    right: 2%;
+  }
+  
+  .ellipseSignup{
+    bottom: 33%;
+    right: 17%;
+  }
+}
+
+@media screen and (max-width: 768px) and (min-width: 526px) {
+  .signup-form>.checkbox-signup {
+    width: 25rem;
+  }
+  .signup-form>.nameRow {
+    gap: 1rem;
+  }
+  .signup-form>.nameRow>input {
+    width: 40%;
+  }
+  .signup-form>.email>input {
+    width: 55%;
+  }
+  .signup-form>.college>input {
+    width: 55%;
+  }
+  .signup-form>.identityPhoto>div {
+    width: 90%;
+  }
+  .signup-form>.identityPhoto {
+    width: 90%;
   }
   .signup-form>.idNumber>input {
     width: 55%;
@@ -217,7 +294,160 @@ input {
   .signup-form>.moreDetails{
     gap: 1rem;
   }
+  .signup-form>.moreDetails>input{
+    width: 40%;
+  }
   .signup-form>.password>input {
     width: 55%;
+  }
+  .star-1Signup{
+    top: 26%;
+    right: 18% ;
+    z-index: 99999;
+  }
+  .star-2Signup{
+    bottom: 20%;
+    left: 10%;
+    z-index: 99999;
+  }
+  .line-4Signup{
+    bottom: 35%;
+    right: 2%;
+    height: 140px;
+  }
+  
+  .ellipseSignup{
+    bottom: 33%;
+    right: 18%;
+  }
+}
+
+@media screen and (max-width: 526px) and (min-width: 395px) {
+  .signup-form {
+    width: 85vw;
+  }
+  .signup-form>.checkbox-signup {
+    width: 18rem;
+  }
+  .signup-form>.nameRow {
+    flex-direction: column;
+    gap: 0;
+  }
+  .signup-form>.nameRow>input {
+    width: 100%;
+  }
+  .signup-form>.email>input {
+    width: 60%;
+  }
+  .signup-form>.college>input {
+    width: 60%;
+  }
+  .signup-form>.identityPhoto>div {
+    width: 80%;
+  }
+  .signup-form>.identityPhoto {
+    width: 85%;
+  }
+  .signup-form>.idNumber>input {
+    width: 60%;
+  }
+  .signup-form>.moreDetails{
+    gap: 0;
+  }
+  .signup-form>.moreDetails>input{
+    width: 40%;
+  }
+  .signup-form>.password>input {
+    width: 60%;
+  }
+  .star-1Signup{
+    top: 22%;
+    right: 10% ;
+    z-index: 99999;
+  }
+  .star-2Signup{
+    bottom: 20%;
+    left: 3%;
+    height: 50px;
+    z-index: 99999;
+  }
+  .star-3Signup {
+    top: 26%;
+    left: 15%;
+  }
+  .line-4Signup{
+    bottom: 35%;
+    right: 0;
+    height: 100px;
+  }
+  .ellipseSignup{
+    bottom: 33%;
+    right: 16%; 
+  }
+}
+
+@media screen and (max-width: 394px) {
+  .signup-form {
+    width: 90vw;
+  }
+  .signup-form>.checkbox-signup {
+    width: 15rem;
+  }
+  .signup-form>.nameRow {
+    flex-direction: column;
+    gap: 0;
+  }
+  .signup-form>.nameRow>input {
+    width: 85%;
+  }
+  .signup-form>.email>input {
+    width: 65%;
+  }
+  .signup-form>.college>input {
+    width: 65%;
+  }
+  .signup-form>.identityPhoto>div {
+    width: 90%;
+  }
+  .signup-form>.identityPhoto {
+    width: 90%;
+  }
+  .signup-form>.idNumber>input {
+    width: 65%;
+  }
+  .signup-form>.moreDetails{
+    gap: 0;
+  }
+  .signup-form>.moreDetails>input{
+    width: 40%;
+  }
+  .signup-form>.password>input {
+    width: 55%;
+  }
+  .star-1Signup{
+    top: 16%;
+    right: 10% ;
+    height: 70px;
+    z-index: 99999;
+  }
+  .star-2Signup{
+    bottom: 2%;
+    left: 1%;
+    height: 50px;
+    z-index: 99999;
+  }
+  .star-3Signup {
+    top: 26%;
+    left: 8%;
+  }
+  .line-4Signup{
+    bottom: 30%;
+    right: 0;
+    height: 100px;
+  }
+  .ellipseSignup{
+    /* bottom: 33%;
+    right: 18%; */
+    display: none;
   }
 }
