--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,21 +1,18 @@
 .navbar  {
-    height: auto;
-    margin-top: 0px;
+    height: 3rem;
     background-color: transparent;
     position: fixed;
     top: 0;
     z-index: 999;
-    padding: 0px 0.3rem;
+    padding: 1rem 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    /* transition: background-color 0.5s ease-in-out; */
 }
 
 .navbar.blurred{
     backdrop-filter: blur(10px);
-    /* background-color: rgba(255, 255, 255, 0.1); */
 }
 
 a {
