--- a/src/pages/Events/Events.css
+++ b/src/pages/Events/Events.css
@@ -1,254 +1,81 @@
+.mainEventBody {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url('../../assets/background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow-y: hidden;
+    height: 100vh;
+    background-color: black !important;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    filter: contrast(1);
+    gap: 5rem;
+    width: fit-content;
+    padding-top: 3rem;
+}
+
 .events {
-    background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.7)), url('../../assets/background.png');
-    position: relative;
-    height: 150vh;
-    width: 100%;
-    background-size: 100% 100%;
-    font-family: Stellar;
     overflow-y: scroll;
 }
 
-.youImg {
-    margin: 10vh 0px 0px 0%;
-}
-
-.secNavBar {
-    margin: 0px 10px 0px 25%;
-    color: #F8F8F8;
-    display: flex;
-}
-
-.secNavBar>.a {
-    color: #F8F8F8;
-    margin:0 20px 0 20px;
-    font-size: 32px;
-    position: relative;
-    cursor: pointer;
-
-    &::after {
-        content: '';
-        position: absolute;
-        width: 0;
-        /* Initially, the underline has no width */
-        height: 4px;
-        /* You can adjust the height as needed */
-        bottom: -20px;
-        left: 50%;
-        background-color: #E8257D;
-        /* Underline color */
-        transition: width 0.3s ease-in-out, left 0.3s ease-in-out;
-        /* Transition for width and left position with easing */
-        transform: translateX(-50%);
-        /* Center the underline */
-        transform-origin: 50% 50%;
-        
-    }
-
-    &:hover::after {
-        width: 80%;
-        
-    }
-}
-
-.secNavBar>a:link,
-.secNavBar:hover,
-.secNavBar:active,
-.secNavBar::before {
-    text-decoration: none;
-    /* color: #F8F8F8; */
-}
-
-/* .secNavBar>a:hover::after{
-  content: '';
-  width: 100%;
-  transform: scaleX(0);
-  height: 1px;
-  bottom: 0;
-  left: 0;
-  background-color: red;
-  transform-origin: bottom right;
-  transition: transform 0.25s ease-out;
-} */
-.card-Container{
-
-    display: grid;
-    grid-template-columns: repeat(3,minmax(10rem,0.5fr));
-    grid-auto-rows: auto;
-    grid-row-gap: 0;
-    grid-gap: 1rem;
-    margin-left: 10%;
-    margin-top: 5%;
-    overflow: scroll;
-    
-    
-}
-@media screen and (max-width: 768px){
-    .card-Container {
-        grid-template-columns: repeat(1, minmax(10rem, 1fr));
-        margin-left: 25%;  /* For tablets */
-    }
-    .secNavBar>.a {
-        font-size: 3.5vw;
-        margin:0 30px 0 30px;
-    }
-    .secNavBar {
-        margin: 0px 10px 0px 0%;
-        width: 60%;
-    }
-    .youImg {
-        margin: 10vh 0px 0px 15%;
-        width: 60%;
-    }
-
-}
-@media screen and (min-width: 768px)  {
-    .card-Container {
-        grid-template-columns: repeat(2, minmax(10rem, 1fr));
-        margin-left: 20vw; 
-    }
-    .youImg {
-        margin: 10vh 0px 0px 28%;
-    }
-    .secNavBar>.a {
-        font-size: 3.5vw;
-        margin:0 40px 0 40px;
-    }
-    .secNavBar {
-        margin: 0px 10px 0px 18%;
-    }
-    .events{
-        width: 100%;
-        /* overflow: scroll; */
-    }
-    
-}
-
-@media screen and (min-width: 1025px)  {
-    .card-Container {
-        grid-template-columns: repeat(3, minmax(10rem, 0.5fr)); 
-        margin-left: 12vw;
-    }
-    .youImg {
-        margin: 10vh 0px 0px 35%;
-    }
-    .secNavBar>.a {
-        font-size: 3.5vw;
-        margin:0 60px 0 60px;
-    }
-    .secNavBar {
-        margin: 0px 10px 0px 18%;
-    }
-}
-
-@media screen and (min-width: 1366px) {
-    .card-Container {
-        grid-template-columns: repeat(3, minmax(10rem, 1fr)); /* For tablets */
-    }
-    .youImg {
-        margin: 10vh 0px 0px 35%;
-    }
-    .secNavBar>.a {
-        font-size: 2.5vw;
-        margin:0 120px 0 120px;
-    }
-    .secNavBar {
-        margin: 0px 10px 0px 18%;
-    }
-}
-
-@media screen and (min-width: 1680px) {
-    .card-Container {
-        grid-template-columns: repeat(3, minmax(10rem, 1fr)); /* For tablets */
-    }
-}
-
-
-
-
-
-
-
-/*  */
-/*  */
-/*  */
-.registre-container{
-    background-image: url(../../assets/background.png);
+.youthopiaImg {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    flex-direction: column;
-
 }
-.registre{
+
+.secNavBar {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    padding: 0 1rem;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 !important;
+    width: 100%;
+    margin-bottom: 2rem !important;
+}
+
+.a {
+    border: none;
     position: relative;
-    background-color: rgba(0, 0, 0, 0.71);
-    border-radius: 138px;
-    height: 90vh;
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: Stellar;
-    font-size: 32px;
     color: #f8f8f8;
-    margin-top: 40px;
-    /* margin: 0vh 20vh 0vh 25vh; */
+    cursor: pointer;
+    font-size: 2rem;
 }
 
-.registre-text{
-    width: 80%;
-    text-align: center;
-    font-size: 40px;
-    font-weight: 600;
+.a:hover {
+    border: none !important;
 }
 
-.registre-btn{
-    border-radius: 35px;
-    border: 1px solid #FFF;
-    width: 180px;
-    height: 43.43px;
-    font-size: 18px;
+.a:hover {
+    border-bottom: 5px solid #E8257D;
+}
+
+.a::after {
+    content: '';
+    position: absolute;
+    width: 0px;
+    height: 5px;
+    left: 50%;
+    bottom: 0;
+    background-color: #E8257D;
+    transition: all ease-in-out .2s;
+}
+
+.a:hover::after {
+    width: 100%;
+    left: 0;
+}
+
+.card-Container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
-}
-
-.star-1{
-    position: absolute;
-    top: 0;
-    right: 2%;
-
-}
-
-.star-3{
-    position: absolute;
-    top: 18%;
-    left: 20%;
-    width: 25px;
-}
-
-.star-2{
-    position: absolute;
-    bottom: 3%;
-    left: 0;
-
-}
-
-.line-4{
-    position: absolute;
-    bottom: 34%;
-    right: -4%;
-}
-
-.ellipse{
-    position: absolute;
-    bottom: 30%;
-    right: 4%;
-
+    gap: 8rem;
+    margin-bottom: 5rem;
 }
