--- a/src/pages/Events/Events.css
+++ b/src/pages/Events/Events.css
@@ -13,7 +13,7 @@
     filter: contrast(1);
     gap: 5rem;
     width: fit-content;
-    padding-top: 3rem;
+    /* padding-top: 3rem; */
 }
 
 .events {
