--- a/src/components/home-compo/main.css
+++ b/src/components/home-compo/main.css
@@ -1,5 +1,5 @@
 .main-page {
-    height: 100vh;
+    height: fit-content;
     width: 100vw;
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url(../../assets/background.png);
     background-size: cover;
@@ -14,21 +14,21 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 20px;
     align-items: center;
     justify-content: center;
-    margin-top: 30px;
+    margin-top: 5%;
 }
 
 .RowTwo {
     display: flex;
     width: 100vw;
-    height: 50vh;
+    height: fit-content;
     align-items: center;
     justify-content: center;
 }
 .RowTwo img {
-    height: 50vh;
+    width: 80%;
 }
 .inner-container {
     display: flex;
@@ -81,12 +81,13 @@
     top: 50%;
     left: 0;
 }
-
-.RowTwo {
-    padding: 0 1rem;
-    max-width: 950px;
-    position: relative;
+.RowOne{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+
 .elipse {
     position: absolute;
     right: 0;
@@ -175,39 +176,34 @@
 }
 @media (min-width:320px) and (max-width:424px) {
     .DIT {
-        margin-top: 10vh;
-        margin-left: 20%;
-        width: 60%;
+        width: 40%;
     }
     .main-page {
-        height: 128vh   ;
+        height: 80vh   ;
     }
     .clg-logo {
         width: 60px;
     }
     .RowTwo {
-        margin-left: 10%;
-        width: 70%;
-        margin-top: -27vh;
+        width: 80%;
+    }
+    .RowThree img{
+        width: 60%;
     }
 }
 
 @media (min-width: 425px) and (max-width:524px){
     .DIT {
-        margin-top: 30vh;
-        margin-left: 20%;
-        width: 60%;
+        width: 40%;
     }
     .main-page {
-        height: 128vh   ;
+        height: 90vh   ;
     }
     .clg-logo {
         width: 60px;
     }
     .RowTwo {
-        margin-left: 10%;
-        width: 70%;
-        margin-top: -27vh;
+        width: 80%;
     }
 }
 @media (min-width: 525px) and (max-width:768px) {
@@ -232,7 +228,7 @@
         margin-top: 24vh;
     }
     .main-page {
-        height: 130vh;
+        height: 140vh;
     }
     .clg-logo {
         width: 60px;
