--- a/src/components/Ticket/Ticket.css
+++ b/src/components/Ticket/Ticket.css
@@ -1,20 +1,18 @@
 .Ticket-container{
-    width:100vw;
+    min-width: 768px;
+    max-width: 768px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 1rem 3rem;
+    position: relative;
 }
 .rec{
-    width: 100%;
+    width: 768px;
     position: absolute;
     top: 0;
     left: 0;
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
-   
 }
 
 .Logos{
@@ -23,7 +21,7 @@
     display: flex;
     justify-content: space-between;
     z-index: 1;
-   top: 3vw;
+   top: 2vw;
    margin-top: 3rem;
 }
 .Ticket{
@@ -63,10 +61,9 @@
     width: 30%;
 }
 .Ticket-details p{
-    font-size: 1.5rem;
-    line-height: 2.8rem;
+    font-size:  1.2rem;
+    line-height: 2.5rem;
     text-align: left;
-    /* line-height: 3.5vw; */
     font-family: Stellar , sans-serif;
 }
 .head{
@@ -75,4 +72,20 @@
    padding-bottom: 20px;
    font-size: 2.1rem !important;
     
+}
+@media screen and (max-width: 1024px) {
+    .Ticket-details p{
+        font-size:  0.5rem;
+        line-height: 1.5rem;  
+    }
+
+    .head{ 
+        padding-bottom: 10px;
+       font-size: 1rem !important; 
+    }
+
+    .Logos{
+        margin-top:0.2rem;
+    }
+
 }
