--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -1,8 +1,6 @@
 body{
     background-image: url('../../assets/background.png');
     height:400px ;
-    
-    
 }
 .eventDet{
     display: flex;
@@ -10,12 +8,13 @@ body{
     margin-left: 25%;
     margin-right: 25%;
     margin-bottom: 5%;
-    
 }
-.youthop{
-    margin: 0 0px 0px 38%;
-
-    
+.youthopia-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    margin-top: 5% ;
 }
 .poster{
     background-color: white;
@@ -24,7 +23,6 @@ body{
     border-radius: 5px;
 }
 .heading{
-    
     height: fit-content;
 }
 .partDet{
@@ -43,22 +41,18 @@ body{
     height: fit-content;
     padding: 10vh;
     width: 80%;
-    
-    
-    
     font-family: Stellar;
     font-size: 32px;
     color: #f8f8f8;
-    margin-top: 40px;
+    margin: 40px 0;
 }
 .register form{
-    width:95%;
+    width: 95%;
 }
 .register p{
     position: relative;
     left: 5%;
     width: fit-content;
-    
 }
 .horiLine{
     margin-bottom: 40px;
@@ -80,7 +74,8 @@ body{
 .register .reg{
     background-color: white;
     color: black;
-    width: 20%;
+    width: 30%;
+    text-align: center;
 }
 .register .Ind{
     width: 90%;
@@ -91,16 +86,16 @@ body{
     justify-content: space-between;
     width: fit-content;
     margin-left: 5%;
-    
 }
 .register .Counter button{
-    margin: 10px;
+    margin: 5px;
     background-color: white;
     height: 50px;
     width: 50px;
     color: black;
     border-radius: 5px;
-    font-size: 24px;
+    font-size: 30px;
+    padding: 0;
 }
 .register .Counter p{
     margin-top: 10px;
@@ -112,28 +107,136 @@ body{
     border: 1px solid white;
     height: 50px;
     width: 50px;
-    
     color: white;
     border-radius: 5px;
 }
 
-@media (min-width:320px) and (max-width:424px) {
+/* @media (min-width:320px) and (max-width:424px) {
     .register{
         border-radius: 10px;
         font-size: 10%;
     }
-}
+} */
 
-@media (min-width: 425px) and (max-width:524px){
-    
+@media (max-width: 395px) {
+    .register {
+        padding: 5vh;
+    }
+    .register form{
+        width: 100%;
+    }
+    .register .reg {
+        width: 70%;
+        text-align: center;
+    }
+    .register .Ind{
+        width: 100%;
+        margin-left: 5%;
+    }
+    .youthopia-logo {
+        margin-top: 20%;
+    }
+    .eventDet{
+        justify-content:space-between;
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-top: 5%;
+    }
+    .poster{
+        height: 180px;
+        width: 160px;
+        border-radius: 5px;
+    }
+    .heading{
+        height: fit-content;
+        font-size: 40px;
+    }
+    .Ind .line-4 {
+        display: none;
+    }
+    .Ind .ellipse {
+        display: none;
+    }
+    /* .register .Counter button {
+        height: 40px;
+        width: 20px;
+        margin: 0;
+    } */
 }
-@media (min-width: 525px) and (max-width:768px) {
-    
+@media (min-width: 425px) and (max-width:524px){
+    .register {
+        padding: 5vh;
+    }
+    .register form{
+        width: 100%;
+    }
+    .register .reg {
+        width: 70%;
+        text-align: center;
+    }
+    .register .Ind{
+        width: 100%;
+        margin-left: 5%;
+    }
+    .youthopia-logo {
+        margin-top: 20%;
+    }
+    .eventDet{
+        justify-content:space-between;
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-top: 5%;
+    }
+    .poster{
+        height: 200px;
+        width: 180px;
+        border-radius: 5px;
+    }
+    .heading{
+        height: fit-content;
+        font-size: 50px;
+        /* margin: 0 20px; */
+    }
+}
+@media (min-width: 525px) and (max-width:769px) {
+    .register form{
+        width: 100%;
+    }
+    .register .reg {
+        width: 60%;
+        text-align: center;
+    }
+    .Register {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .eventDet{
+        justify-content:space-between;
+        margin-left: 15%;
+        margin-right: 15%;
+    }
+    .poster{
+        height: 200px;
+        width: 200px;
+        border-radius: 5px;
+    }
+    .heading{
+        height: fit-content;
+        /* margin: 0 20px; */
+    }
 }
 @media (min-width:769px) and (max-width: 1024px) {
-    
+    .register form{
+        width: 100%;
+    }
+    .register .reg {
+        width: 40%;
+        text-align: center;
+    }
 }
-@media (min-width: 1200px) {
+/* @media (min-width: 1200px) {
     
 }
 @media (min-width: 1600px) {
@@ -141,4 +244,4 @@ body{
 }
 @media (min-width: 1800px) {
     
-}
+} */
