--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -9,7 +9,7 @@ body{
     margin-right: 25%;
     margin-bottom: 5%;
 }
-.youthopia-logo {
+.youtlg {
     display: flex;
     align-items: center;
     justify-content: center;
