--- a/src/pages/Events/Events.css
+++ b/src/pages/Events/Events.css
@@ -16,6 +16,13 @@
     padding-top: 3rem;
 }
 
+.loaderDiv{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -5rem;
+}
+
 .events {
     overflow-y: scroll;
 }
