--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -15,7 +15,7 @@
     position: relative;
     background-color: rgba(0, 0, 0, 0.75);
     border-radius: 138px;
-    height: 90vh;
+    height: fit-content;
     width: 80%;
     display: flex;
     flex-direction: column;
@@ -26,6 +26,7 @@
     color: #f8f8f8;
     margin-top: 40px;
     gap: 60px;
+    padding: 1rem;
     /* margin: 0vh 20vh 0vh 25vh; */
 }
 
@@ -187,7 +188,7 @@ hr {
     }
 }
 
-@media screen and (max-width: 395px) {
+@media screen and (max-width: 440px) {
     .profile-container {
         width: 90%;
         height: 90vh;
