--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
     padding: 0;
 }
@@ -24,10 +24,10 @@
     font-family: Stellar;
     font-size: 32px;
     color: #f8f8f8;
-    margin-top: 40px;
+    margin: 4rem;
+    margin-bottom: 3rem;
     gap: 60px;
     padding: 1rem;
-    /* margin: 0vh 20vh 0vh 25vh; */
 }
 
 .profile-img {
