carousel images fetched

--- a/src/components/MapComponent/MapComponent.css
+++ b/src/components/MapComponent/MapComponent.css
@@ -9,6 +9,7 @@
   background-repeat: no-repeat;
   overflow: hidden;
   text-align: center;
+  align-items: center;
   justify-content: center;
 }
 .map-heading {
