--- a/src/components/HomeCarousel/HomeCarousel.css
+++ b/src/components/HomeCarousel/HomeCarousel.css
@@ -24,6 +24,16 @@
     text-transform: uppercase;
 }
 
+.CarouselCard {
+  height: 20rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  transition: all 0.5s smooth;
+  object-fit: cover;
+}
 
 
 
