--- a/src/components/IndividualEvents/IndividualEvent.css
+++ b/src/components/IndividualEvents/IndividualEvent.css
@@ -38,7 +38,7 @@
     width: 40%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .eventImage>img {
