Optimized BG Image

--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,5 +1,5 @@
 .LoginContainer {
-    background-image: url(../../assets/background.png);
+    background-image: url(../../assets/background.webp);
     display: flex;
     justify-content: center;
     align-items: center;
