--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -1,5 +1,5 @@
 .profile {
-    background-image: url(../../assets/background.png);
+    background-image: url(../../assets/background.webp);
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
