--- a/src/components/home-compo/main.css
+++ b/src/components/home-compo/main.css
@@ -1,7 +1,7 @@
 .main-page {
     height: 100vh;
     width: 100vw;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url(../../assets/background.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url(../../assets/background.web);
     background-size: cover;
     background-repeat: no-repeat;
     filter: brightness(140%);
