--- a/src/pages/ConfirmEmail/ConfirmEmail.css
+++ b/src/pages/ConfirmEmail/ConfirmEmail.css
@@ -1,5 +1,5 @@
 .confirm-container{
-    background-image: url(../../assets/background.png);
+    background-image: url(../../assets/background.webp);
     display: flex;
     justify-content: center;
     align-items: center;
