--- a/src/pages/Gallery/Gallery.css
+++ b/src/pages/Gallery/Gallery.css
@@ -1,5 +1,5 @@
 .gallery{
-    background-image:  url("../../assets/background.png");
+    background-image:  url("../../assets/background.webp");
     background-size: cover;
     background-repeat: no-repeat;
 
