--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('../../assets/background.png');
+    background-image: url('../../assets/background.webp');
     height:400px ;
 }
 .eventDet{
