--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -23,7 +23,9 @@ body{
     border-radius: 5px;
 }
 .heading{
-    height: fit-content;
+    font-size: 3rem;
+    font-weight: 900;
+    
 }
 .partDet{
     display: flex;
@@ -245,3 +247,24 @@ body{
 @media (min-width: 1800px) {
     
 } */
+.registermaindiv{
+    display: flex;
+    width: 100%;
+    height: auto;
+    margin: 0;
+    padding: 0;
+}
+.venue{
+    font-size: 1.5rem;
+    font-weight: 900;
+    margin-top: 0;
+    margin-bottom: 0;
+    color: white;
+}
+.time{
+    font-size: 1.5rem;
+    font-weight: 900;
+    margin-top: 0;
+    margin-bottom: 0;
+    color: white;
+}
