--- a/src/components/home-compo/main.css
+++ b/src/components/home-compo/main.css
@@ -1,9 +1,10 @@
 .main-page {
     height: 100vh;
     width: 100vw;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url(../../assets/background.web);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url("../../assets/background.webp");
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
     filter: brightness(140%);
     overflow: hidden;
     filter: contrast(1);
