--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -277,19 +277,17 @@ body{
     .venuefont{
         margin-top: 10px;
     }
-    .timefont{
-        margin-top: 10px;
-    }
-    .eventTitle{
-        margin-left: 20%
-    }
     .eventInfo{
-        margin-left: 20%
+        display: flex;
+        justify-content: center;
     }
     .eventDetailsTop1{
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+    .eventTitle1{
+        margin-left: 30%;
     }
 }
 .eventDetailsTop1{
@@ -307,6 +305,15 @@ body{
     text-align: left;
 }
 @media (max-width: 862px) {
+    .eventDetailsTop1{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+}
+    
+}
+@media (max-width: 970px) {
     .eventDetailsTop1{
     display: flex;
     justify-content: flex-start;
