--- a/src/pages/Developers/Developers.css
+++ b/src/pages/Developers/Developers.css
@@ -3,7 +3,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     overflow-y: hidden;
-    height: 100vh;
+    min-height: 100vh;
     background-color: black !important;
     background-position: center;
     display: flex;
@@ -15,39 +15,54 @@
     padding-bottom: 1rem;
     /* width: fit-content; */
     padding-top: 0rem;
+    color: white;
     
-}
-.developer .dev-container::after{
-    content: "";
-    background-color: rgba(0, 0, 0, 0.34);
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    position: absolute;
-    z-index: -1;
-}
-.youthopia-logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.card-cont{
-    margin:0 2.2rem 0 2.2rem;
-    
-}
-.card-container{
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-end;
-    width: 80%;
 }
 
-.card-container .heading{
-    color: #E8257D;
-    font-size: 2rem;
+.dev-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
 }
-.card-container .con{
-    color: #ffffff;
-    font-size: 2rem;
+
+.dev-card-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+.developersSec{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    width: 50vw;
+    gap: 5rem;
+    padding: 0 1rem;
+}
+
+.member{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.member:hover{
+    transform: scale(1.3);
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+}
+
+.member>img{
+    width: 10rem;
+    height: 10rem;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid white;
 }
