--- a/src/pages/Events/card/Card.css
+++ b/src/pages/Events/card/Card.css
@@ -3,6 +3,7 @@
     width: 20rem;
     border-radius: 10px;
     background-color: transparent;
+    cursor: pointer;
 }
 .card:hover{
     color: black;
