--- a/src/pages/Developers/Developers.css
+++ b/src/pages/Developers/Developers.css
@@ -45,6 +45,10 @@
     padding: 0 1rem;
 }
 
+.designHeading{
+    margin-top: 5rem;
+}
+
 .member{
     display: flex;
     flex-direction: column;
