Chores: Updated the font color for the register page

--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -147,6 +147,9 @@
     color: white;
     border-radius: 5px;
 }
+.eventDetailsTop1{
+    color: white;
+}
 
 /* @media (min-width:320px) and (max-width:424px) {
     .register{
