--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -67,10 +67,18 @@
 .signup-form>.checkbox-signup>input{
   width: 1rem;
   height: 1rem;
-  border-radius: 50%;
   border: 2px solid #f8f8f8;
-  background-color: transparent;
   accent-color: #f8f8f8;
+}
+
+.signup-form>.checkbox-signup>input:checked{
+  accent-color: #E808CC;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 .signup-form>.checkbox-signup>p{
